--- a/build.gradle
+++ b/build.gradle
@@ -90,7 +90,9 @@ nexusPublishing {
 }
 
 // skip signing for jitpack (snapshots)
-tasks.withType(Sign) {onlyIf { false == true }}
+tasks.withType(Sign) {
+    return // skip signing
+}
 
 // Required signing properties for release: signing.keyId, signing.password and signing.secretKeyRingFile
 // (https://docs.gradle.org/current/userguide/signing_plugin.html#sec:signatory_credentials)
