--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'ru.vyarus.github-info' version '1.5.0' apply false
     id 'ru.vyarus.quality' version '4.9.0' apply false
-
+    id 'maven-publish'
     id 'base'
     id 'jacoco'
     id 'ru.vyarus.java-lib' version '2.4.0'
